# behaviour_direction

./: .gitignore  README.md  TODO.md  check_openrouter.py  debug_token_ids.py  notebook.ipynb  pyproject.toml  run_completion.py  setup.sh  test_score_parsing.py  visualize_results.py
dataset/: __init__.py  load_dataset.py
datasets/extended/s1/: raw_data_2020.json  raw_data_2021.json
datasets/generate/extended/survival-instinct/: generate_extended_scenarios.py
datasets/raw/survival-instinct/: dataset_extended.json
pipeline/: config.py  run_pipeline.py
pipeline/model_utils/: gemma_model.py  llama2_model.py  llama3_model.py  model_factory.py  qwen3_model.py  qwen_model.py  yi_model.py
pipeline/runs/Llama-2-13b-chat-hf/survival-instinct/: direction_metadata.json
pipeline/runs/Llama-2-13b-chat-hf/survival-instinct/evaluations/: ab_evaluation.json  open_ended_evaluation.json
pipeline/runs/Llama-2-13b-chat-hf/survival-instinct/select_direction/: selection_results.json
pipeline/runs/Llama-2-7b-chat-hf/survival-instinct/: direction_metadata.json
pipeline/runs/Llama-2-7b-chat-hf/survival-instinct/evaluations/: ab_evaluation.json  open_ended_evaluation.json
pipeline/runs/Meta-Llama-3-8B-Instruct/survival-instinct/: direction_metadata.json
pipeline/runs/Qwen3-8B/survival-instinct/: direction_metadata.json
pipeline/runs/gemma-7b-it/survival-instinct/: direction_metadata.json
pipeline/submodules/: evaluate_behaviour.py  generate_directions.py  select_direction.py
pipeline/utils/: device_utils.py
(+14 files in other folders)
